--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -710,7 +710,7 @@ Fördelarna med designprocessen för UX då Kibana används var att fokus låg p
 Trots begränsningarna gällande anpassningsbarheten av visualiseringen erbjuder Kibana lösningar på dessa problem genom att till exempel inkludera \textit{dashboards} i webbsidor.  Eftersom Kibana är ett open-sourceprojekt ser författarna att många begränsningar i Kibana kan komma att elimineras i framtiden. 
 
 \section{Förslag på framtida arbete}
-Under förberedelsen av data inför visualisering i Kibana visade det sig att data måste vara format som är kompatibla med Kibana. Det skulle därför vara lämpligt att undersöka hur modifieringen av data innan de kan visualiseras i Kibana kan ske på ett effektivt och icke tidskrävande sätt. Detta skulle gynna UX-designprocessen vid användning av Kibana eftersom det är ett av krav systemet ska vara klar innan visualisering av data. En undersökning kring detta skulle alltså hitta ett sätt att förkorta tiden som spenderas på att få in data i Kibana vilket skulle leda till att UX-designprocessen kan påbörjas snabbare.
+Under förberedelsen av data inför visualisering i Kibana visade det sig att data måste vara i ett format som är kompatibelt med Kibana. Det skulle därför vara lämpligt att undersöka hur modifieringen av data innan de kan visualiseras i Kibana kan ske på ett effektivt och icke tidskrävande sätt. Detta skulle gynna UX-designprocessen vid användning av Kibana eftersom det är ett av krav systemet ska vara klar innan visualisering av data. En undersökning kring detta skulle alltså hitta ett sätt att förkorta tiden som spenderas på att få in data i Kibana vilket skulle leda till att UX-designprocessen kan påbörjas snabbare.
 
 Ytterligare ett förslag till fortsatt arbete är att undersöka möjligheten att inkludera en \textit{dashboard} i en webbsida och analysera om den eliminerar begränsningarna i UX-designprocessen vid användning av Kibana och i så fall hur effektivt detta görs. För att kunna undersöka hur bra Kibana är gällande visualisering av data hade det kunnat jämföras med verktyg som liknar Elastic Stack, d.v.s. en större samling av projekt som hämtar, hanterar och visualiserar data. 
 
