--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -726,7 +726,7 @@ https://db-engines.com/en/ranking/search+engine
    
 [4] Donald Arthur Norman, Austin Henderson. What You See, Some of What's in the Future, And How We Go About Doing It: HI at Apple Computer [Internet]. USA: Cupertino; 1995 [citerad 2018-03-28]. Hämtad från: https://dl.acm.org/citation.cfm?id=223477
 
-[5] Nielsen Norman Group. The definition of User Experience(UX) [Internet]. USA: Nielsen Norman Group [citerad 2018-04-01]. Hämtad från:  https://www.nngroup.com/articles/definition-user-experience/        
+[5] Don Norman, Jakob Nielsen. The definition of User Experience(UX) [Internet]. USA: Nielsen Norman Group [citerad 2018-04-01]. Hämtad från:  https://www.nngroup.com/articles/definition-user-experience/        
                            
 [6] Kantaro Go, Atsushi Nakamura, Yuichiro Kinoshita. UX Gymnastics: Representation of UX Theory and Concepts through Full Body Movement [Internet].  Japan: University of Yamanashi; 2016 [citerad 27 mars 2018]. Hämtad från: https://ieeexplore-ieee-org.focus.lib.kth.se\newline/stamp/stamp.jsp?tp\=\&arnumber=7564044
                                            
@@ -744,7 +744,7 @@ https://ieeexplore-ieee-org.focus.lib.kth.se\newline/stamp/stamp.jsp?tp\=\&arnum
 [12] 1177 Vårdguiden. Färgblindhet [Internet]. Stockholm: 1177 Vårdguiden; 2017 [uppdaterad 2017-01-11; citerad 2018-03-27]. Hämtad från:\newline 
 https://www.1177.se/Stockholm/Fakta-och-rad/Sjukdomar/Fargblindhet/
 
-[13]Nielsen Norman Group. A 100-Year View of User Experience [Internet].  USA: Nielsen Norman Group; 2017 [citerad 2018-04-07]. Hämtad från:  https://www.nngroup.com/articles/100-years-ux/
+[13] Jakob Nielsen. A 100-Year View of User Experience [Internet].  USA: Nielsen Norman Group; 2017 [citerad 2018-04-07]. Hämtad från:  https://www.nngroup.com/articles/100-years-ux/
 
 [14] Norman Don. The design of everyday things. New York: Basic Books; 2013. ISBN 978-0-465-05065-9 
 
@@ -754,7 +754,7 @@ https://www.1177.se/Stockholm/Fakta-och-rad/Sjukdomar/Fargblindhet/
 
 [17] Tuomas Nissinen. User experience prototyping – a literature review [Internet]. Finland: University of Oulu; 2015 [citerad 2018-05-02]. Hämtad från: http://jultika.oulu.fi/files/nbnfioulu-201504221415.pdf 
 
-[18] Nielsen Norman Group. UX Prototypes: Low Fidelity vs. High Fidelity [Internet].  USA: Nielsen Norman Group; 2016 [citerad 2018-05-03]. Hämtad från: https://www.nngroup.com/articles/ux-prototype-hi-lo-fidelity/ 
+[18] Kara Pernice. UX Prototypes: Low Fidelity vs. High Fidelity [Internet].  USA: Nielsen Norman Group; 2016 [citerad 2018-05-03]. Hämtad från: https://www.nngroup.com/articles/ux-prototype-hi-lo-fidelity/ 
 
 [19] Project Management Institute. Success Rates Rise Transforming the high cost of low performance [Internet]. USA:  Project Management Institute; 2017 [citerad 2018-05-01]. Hämtad från:\newline https://www.pmi.org/-\newline/media/pmi/documents/public/pdf/learning/thought-leadership/pulse/pulse-of-the-profession-2017.pdf
 
