--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -538,35 +538,35 @@ Därefter utfördes testning av \textit{dashboarden} i en grupp av fem personer 
 \begin{itemize}
 \item Allmänna frågor: Vid den första testningen av \textit{dashboarden} tyckte majoriteten av testarna att det var svårt att identifiera varje UI-elements rubrik och de önskade att de skulle sticka ut mer. \textit{Dashboarden} gav ett rörigt och förvirrande intryck. 
 
-\item Grundläggande trafikförståelse:Kartorna var svåra att använda för att filtrera, söka och ta fram information om trafik. Dessutom tyckte testarna att det var svårt och komplicerat att identifiera skillnader på fordonsriktningen och hitta specificerad information i \textit{dashboarden}. Placeringen av element skulle kunna vara mer eftertänkt för att följa en rött tråd och många UI-element visualiserade samma information på olika sätt vilket skulle kunna undvikas. Det fanns en förvirring gällande relationerna mellan UI-elementen. 
+\item Grundläggande trafikförståelse: Kartorna var svåra att använda för att filtrera, söka och ta fram information om trafik. Dessutom tyckte testarna att det var svårt och komplicerat att identifiera skillnader på fordonsriktningen och hitta specificerad information i \textit{dashboarden}. Placeringen av element skulle kunna vara mer eftertänkt för att följa en röd tråd och många UI-element visualiserade samma information på olika sätt vilket skulle kunna undvikas. Det fanns en förvirring gällande relationerna mellan UI-elementen. 
 
-\item Avancerad trafikförståelse: Efter första uppgifterna upplevdes det lättare att hantera \textit{dashboarden} men det förblev svårt att kombinera flera olika UI-element för att ta fram önskad information. Det var otydligt hur interaktion med UI-element i \textit{dashboarden} kunde användas för framtagandet av information. 
+\item Avancerad trafikförståelse: Efter de första uppgifterna upplevdes det lättare att hantera \textit{dashboarden} men det förblev svårt att kombinera flera olika UI-element för att ta fram önskad information. Det var otydligt hur interaktion med UI-element i \textit{dashboarden} kunde användas för framtagandet av information. 
 
-\item Sammanfattning:Det uppmärksammades att även mer förklaring gällande UI-element och deras användning borde läggas till. Det önskades också en bättre fördelning av UI-element i \textit{dashboarden} för att öka förståelse och minska förvirringen.
+\item Sammanfattning: Det uppmärksammades att även mer förklaring gällande UI-element och deras användning borde läggas till. Det önskades också en bättre fördelning av UI-element i \textit{dashboarden} för att öka förståelse och minska förvirringen.
 \end{itemize}
 
-\item    Andra iterationens testresultat:
+\item Andra iterationens testresultat:
 
 \begin{itemize}
 \item Allmänna frågor: Den andra testningen visade beskrivningarna och rubrikerna av UI-element hade blivit lättare att identifiera och förstå men det fanns rum för förbättring. Det fanns ett tydligare sammanhang i \textit{dashboarden} men några ändringar skulle kunna göras gällande antalet element som var placerade i \textit{dashboarden}.
 
-\item Grundläggande trafikförståelse:Sökningen underlättades och det var mer lättförståeligt hur önskad information kunde tas fram men det var fortfarande svårt att förstå visa UI-element. Det var dock svårt att identifiera för vilken tidpunkt data representerades.
+\item Grundläggande trafikförståelse: Sökningen underlättades och det var mer lättförståeligt hur önskad information kunde tas fram men det var fortfarande svårt att förstå visa UI-element. Det var dock svårt att identifiera för vilken tidpunkt data representerades.
 
 \item Avancerad trafikförståelse: Det var många UI-element placerade i slutet av \textit{dashboarden} vilket orsakade förvirring och extra letande för att hitta vilket UI-element som skulle användas för framtagandet av önskad information. Uppgifterna utfördes enklare och \textit{dashboard} tillbringade mer förståelse. Det uttrycktes önskemål om mer detaljerad information om betalstationerna utan att behöva interagera med \textit{dashboarden} mer.
 
 \item Sammanfattning: \textit{Dashboarden} var strukturerad och följde ett mönster men det var fortfarande överväldigande i den nedre delen på grund av att det fanns för många UI-element. Dessa skulle kunna sammanfogas så att all data i skulle kunna visualiseras i ett enda element.
 \end{itemize}
 
-\item Tredje iterationens testresultat 
+\item Tredje iterationens testresultat: 
 
 \begin{itemize}
 \item Allmänna frågor: Vid den tredje testningen upplevdes \textit{dashboarden} lättare att förstå enligt testarna. Beskrivningen och instruktioner gav tillräckligt med information för att öka förståelsen av data som presenterades i UI-elementen. Detta underlättade även sökningar i \textit{dashboarden}. 
 
-\item   Grundläggande trafikförståelse:Sökningen, filtrering och interaktion med UI-element upplevdes lättare. Tidpunkten för data som visualiserades i varje UI-element kunde identifieras tack vare förklaringar i rubriker. Dessutom var relationerna mellan UI-elementen i \textit{dashboarden} lättare att förstå.
+\item Grundläggande trafikförståelse: Sökningen, filtrering och interaktion med UI-element upplevdes lättare. Tidpunkten för data som visualiserades i varje UI-element kunde identifieras tack vare förklaringar i rubriker. Dessutom var relationerna mellan UI-elementen i \textit{dashboarden} lättare att förstå.
 
 \item Avancerad trafikförståelse: Testarna upplevde att uppgifterna kunde utföras mycket snabbare och information togs ut på genom en mer intuitiv process. UI-elementen som användes ledde till en snabbare identifiering av information i \textit{dashboarden} i denna iteration. 
 
-\item Sammanfattning:I sin helhet var \textit{dashboarden} mer intuitiv. Förståelsen av \textit{dashboarden} ökades och det fanns en röd tråd i placering och presentation av UI-element samt i information som visualiserades. 
+\item Sammanfattning: I sin helhet var \textit{dashboarden} mer intuitiv. Förståelsen av \textit{dashboarden} ökades och det fanns en röd tråd i placering och presentation av UI-element samt i information som visualiserades. 
 \end{itemize}
 \end{enumerate}
 
